--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@
     height: 200px;
     left: 35%;
     justify-content: center;
+    box-shadow: 1px 5px 2px 1px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
 }
 .card img{
     margin-left: 60%;
@@ -38,7 +40,9 @@
     width: 30%;
     height: 200px;
     top:20%;
-    left:68%
+    left:68%;
+    box-shadow: 1px 5px 2px 1px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
 }
 .calculator img{
     margin-left: 60%;
@@ -53,6 +57,8 @@
     top:20%;
     left:2%;
 border-top: 5px solid hsl(180, 62%, 55%);
+box-shadow: 1px 5px 2px 1px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
 }
 .mirror img{
     /* border: 3px solid red; */
@@ -66,9 +72,36 @@ border-top: 5px solid hsl(180, 62%, 55%);
     height: 200px;
     top:50%;
     left:35%;
+    box-shadow: 1px 5px 2px 1px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
 }
 .karma img{
     /* border: 3px solid red; */
     margin-left: 60%;
     margin-top: 30px;
+}
+@media screen and (max-width:768px) {
+    .karma{
+        position: unset;
+        width: 100%;
+        margin-top: 20px;
+    }
+    .card{
+        position: unset;
+        width: 100%;
+        margin-top: 20px;
+    }
+    .calculator{
+        position: unset;
+        width: 100%;
+        margin-top: 20px;
+    }
+    .mirror{
+        position: unset;
+        width: 100%;
+        margin-top: 20px;
+    }
+    .main p{
+        font-size: 19px;
+    }
 }
