--- a/style.css
+++ b/style.css
@@ -5,11 +5,23 @@
 }
 .main{
     text-align: center;
+    margin-top: 30px;
+    /* border: 2px solid red; */
+}
+.main p{
+    width: 38%;
+    margin: auto;
+    margin-top: 10px;
 }
 .main h2{
     font-weight: 200;
-    color: hsl(212, 46%, 48%);
+    margin-top: 10px;
+    color: hsla(220, 8%, 7%, 0.628);
 }
+.main h1{
+    margin-top: 10px;
+}
+
 h1{
     font-family:Poppins ;
 }
@@ -23,12 +35,12 @@ p{
     font-family: Poppins;
 }
 .all{
-    /* border:2px solid green; */
     position: relative;
     width: 70%;
     height: 500px;
     margin: 5px auto;
     margin-top: 30px;
+    
     
 }
 .card{
@@ -40,6 +52,7 @@ p{
     justify-content: center;
     box-shadow: 1px 5px 2px 1px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
+    
 }
 .card img{
     margin-left: 60%;
@@ -55,6 +68,7 @@ p{
     left:68%;
     box-shadow: 1px 5px 2px 1px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
+
 }
 .calculator img{
     margin-left: 60%;
@@ -73,7 +87,6 @@ box-shadow: 1px 5px 2px 1px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
 .mirror img{
-    /* border: 3px solid red; */
     margin-left: 60%;
     margin-top: 30px;
 }
@@ -88,7 +101,6 @@ box-shadow: 1px 5px 2px 1px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
 .karma img{
-    /* border: 3px solid red; */
     margin-left: 60%;
     margin-top: 30px;
 }
@@ -115,5 +127,9 @@ box-shadow: 1px 5px 2px 1px rgba(0, 0, 0, 0.1);
     }
     .main p{
         font-size: 19px;
+        width: 83%;
+    }
+    .main{
+        margin-top: 20px;
     }
 }
