--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
     /* border: 2px solid red; */
 }
 .main p{
-    width: 38%;
+    width: 50%;
+    font-size: 18px;
     margin: auto;
     margin-top: 10px;
 }
